--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,12 +29,28 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
 
+    sdk: flutter
+  animated_splash_screen: ^1.3.0
+  http: any
+  page_transition: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  double_back_to_close: ^2.0.0
+  intl: ^0.18.0
+  flare_flutter: ^3.0.2
+  flutter_spinkit: ^5.2.0
+  flutter_styled_toast: ^2.1.3
+
+  shared_preferences: ^2.2.0
+  infinite_scroll_pagination: ^4.0.0
+  keyboard_dismisser: ^3.0.0
+  provider: ^6.0.5
+  info_popup: ^3.0.5
+  community_material_icon: ^5.9.55
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +75,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    # - assets/flare/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
